--- a/PyCitySchools_Challenge.ipynb
+++ b/PyCitySchools_Challenge.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\m155205\\AppData\\Local\\Temp/ipykernel_16388/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
+      "C:\\Users\\m155205\\AppData\\Local\\Temp/ipykernel_10956/3904321406.py:18: FutureWarning: The default value of regex will change from True to False in a future version.\n",
       "  student_data_df[\"student_name\"] = student_data_df[\"student_name\"].str.replace(word,\"\")\n"
      ]
     },
@@ -558,10 +558,22 @@
    "execution_count": 5,
    "id": "fe5d9fa5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "24649428"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the Total Budget\n",
-    "total_budget = school_data_df[\"budget\"].sum()"
+    "total_budget = school_data_df[\"budget\"].sum()\n",
+    "total_budget"
    ]
   },
   {
@@ -569,16 +581,49 @@
    "execution_count": 6,
    "id": "9edfe240",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81.85579580976001"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Calculate the Average Scores using the \"clean_student_data\".\n",
     "average_reading_score = school_data_complete_df[\"reading_score\"].mean()\n",
-    "average_math_score = school_data_complete_df[\"math_score\"].mean()"
+    "average_math_score = school_data_complete_df[\"math_score\"].mean()\n",
+    "average_reading_score"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "aa7d8db9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "78.93053295099331"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_math_score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "df807dc9",
    "metadata": {},
    "outputs": [
@@ -589,7 +634,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -606,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "b3fd8d8b",
    "metadata": {},
    "outputs": [
@@ -616,7 +661,7 @@
        "39170"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5870acca",
    "metadata": {},
    "outputs": [
@@ -640,7 +685,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -654,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "caef15d0",
    "metadata": {},
    "outputs": [],
@@ -666,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "6b930717",
    "metadata": {},
    "outputs": [
@@ -676,7 +721,7 @@
        "28939"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -687,7 +732,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "2d2d9c19",
    "metadata": {},
    "outputs": [
@@ -697,7 +742,7 @@
        "33158"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -708,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "9a055a42",
    "metadata": {},
    "outputs": [],
@@ -727,7 +772,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "33d50618",
    "metadata": {},
    "outputs": [],
@@ -738,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "c227ee7d",
    "metadata": {},
    "outputs": [],
@@ -767,7 +812,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "dd4e426e",
    "metadata": {},
    "outputs": [
@@ -831,7 +876,7 @@
        "dtype: float64  "
       ]
      },
-     "execution_count": 16,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -843,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "aa90c1a3",
    "metadata": {},
    "outputs": [],
@@ -890,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "caf279df",
    "metadata": {},
    "outputs": [
@@ -1181,7 +1226,7 @@
        "Wright High School             96.611111          90.333333  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1212,7 +1257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "6fb1a4ed",
    "metadata": {},
    "outputs": [
@@ -1222,7 +1267,7 @@
        "1174"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1242,7 +1287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "d583acf7",
    "metadata": {},
    "outputs": [
@@ -1470,7 +1515,7 @@
        "[1094 rows x 11 columns]"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1484,7 +1529,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "3ad4c73a",
    "metadata": {},
    "outputs": [
@@ -1712,7 +1757,7 @@
        "[1139 rows x 11 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1726,7 +1771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "0b75f43c",
    "metadata": {},
    "outputs": [
@@ -1954,7 +1999,7 @@
        "[1064 rows x 11 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1969,7 +2014,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "8c086dca",
    "metadata": {},
    "outputs": [
@@ -1979,7 +2024,7 @@
        "93.18568994889267"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1993,7 +2038,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "id": "57cfe580",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2048,7 @@
        "97.01873935264055"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2017,7 +2062,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "bf1da82c",
    "metadata": {},
    "outputs": [
@@ -2027,7 +2072,7 @@
        "90.63032367972743"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2041,7 +2086,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "cb1540d0",
    "metadata": {},
    "outputs": [
@@ -2051,7 +2096,7 @@
        "93.18568994889267"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2064,7 +2109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "26d1bc47",
    "metadata": {},
    "outputs": [
@@ -2074,7 +2119,7 @@
        "97.01873935264055"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2087,7 +2132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "6ca7ecc6",
    "metadata": {},
    "outputs": [
@@ -2097,7 +2142,7 @@
        "90.63032367972743"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2110,7 +2155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "21c82db4",
    "metadata": {},
    "outputs": [
@@ -2241,7 +2286,7 @@
        "Pena High School             90.540541  "
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2258,7 +2303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 31,
    "id": "98b916bc",
    "metadata": {},
    "outputs": [
@@ -2389,7 +2434,7 @@
        "Johnson High School            81.222432          53.539172  "
       ]
      },
-     "execution_count": 30,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2402,7 +2447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 32,
    "id": "ac2ef251",
    "metadata": {},
    "outputs": [
@@ -2562,7 +2607,7 @@
        "Wright High School     83.3  84.0  83.8  83.6"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2622,7 +2667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 33,
    "id": "b45e66fa",
    "metadata": {},
    "outputs": [
@@ -2782,7 +2827,7 @@
        "Wright High School     83.8  83.8  84.2  84.1"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
